Changes in sparseLTSEigen version 0.1.1

    + Adapted example to those of package robustHD.