@@ -1,3 +1,5 @@
 Changes in sparseLTSEigen version 0.1.1
 
+    + Parallel computing for sparseLTS() now available via OpenMP.
+
     + Adapted example to those of package robustHD.
